[project]
name="ssh-known-hosts-edit"
description="OpenSSH known_hosts file edit tool"
readme = "README.md"
authors= [
    { name="Wim Van de Meersche", email="wim.vandemeersche@ugent.be"},
]
requires-python = ">=3.8"

dynamic = [ "version" ]


dependencies = [
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.version]
source="vcs"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]

[project.scripts]
# TODO

[project.optional-dependencies]

test = [
    "pytest>=7.4.3,<8"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B", # bugbear
    "C", # complexity
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "D", # docstrings
    "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "E",  # pycodestyle
    "F", # pyflakes/autoflake
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "PERF", # perflint
    "PIE", # flake8-pie
    "PL", # pylint
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops,
    "T20", # flake8-print
    "UP", # pyupgrade
    "W", # pycodestyle
]

ignore = [
    "D107", # undocumented-public-init
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "S101", # allow asserts,
    "T201", # allow printing to console
    "TRY003", # raise-vanilla-args
    "UP007", # typer does not yet support `X | Y` typing syntax
    
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

pylint.max-args = 25 # CLI commands can have many arguments

[tool.ruff.lint.per-file-ignores]

"tests/*" = [
    "D", # Don't enforce docstrings in tests.
    "S",
    "ARG001",
    "PLR2004",
]
